# src/routes/specification.routes.ts
@@ -1,11 +1,11 @@
 import { Router } from 'express';
 
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification';
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
 
 const specificationRouter = Router();
 
-specificationRouter.post('/', (request, response)=>{
-   return createSpecificationController.handle(request, response);
-})
+const createSpecificationController = new CreateSpecificationController()
+
+specificationRouter.post('/', createSpecificationController.handle)
 
 export { specificationRouter};
