# src/swagger.json
@@ -1,7 +1,7 @@
 {
     "openapi":"3.0.0",
     "info":{
-        "title":"RentalX Documentation",
+        "title":"RentX Documentation",
         "description":"This is an API Rent",
         "version":"1.0.0",
         "contact":{
@@ -57,7 +57,7 @@
                                     "type":"array",
                                     "items": {
                                         "type":"object",
-                                        "properteies":{
+                                        "properties":{
                                             "name":{
                                                 "type":"string"
                                             },
@@ -71,6 +71,72 @@
                             }
                         }
                     }
+                }
+            }
+        },
+        "/categories/import":{
+            "post":{
+                "tags":["Category"],
+                "summary":"Upload a new category",
+                "description":"Upload a new category",
+                "requestBody":{
+                    "content":{
+                        "multipart/form-data":{
+                            "schema":{
+                                "type":"object",
+                                "properties":{
+                                    "file":{
+                                        "type":"string",
+                                        "format":"binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201":{
+                        "description":"Created"
+                    }
+                }
+            }
+
+        },
+        "/specifications": {
+            "post":{
+                "tags":["Specifications"],
+                "summary":"Create a specification",
+                "description":"Create a new specification",
+                "requestBody":{
+                   "content":{
+                    "application/json":{
+                        "schema":{
+                            "$ref":"#/definitions/Specifications"
+                        }
+                    }
+                   }
+                },
+                "responses":{
+                    "201":{
+                        "description": "Created"
+                    },
+                    "500":{
+                        "description":"Specification already exists"
+                    }
+                }
+                
+            }
+        }
+    },
+    "definitions":{
+        "Specifications":{
+            "type":"object",
+            "properties":{
+                "name":{
+                    "type":"string"
+                },
+                "description":{
+                    "type":"string"
                 }
             }
         }
